# eval

./: Agent.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: health.py  web.py
app/config/: settings.py
app/core/: logging.py
app/evaluators/: quality.py
app/registry/: __init__.py  discovery.py  evaluator_registry.py  plugin_loader.py
app/schemas/: __init__.py  conversation.py  enums.py  evaluation.py  evidence.py  issue.py  metadata.py  quality.py  recommendation.py  report.py  turn.py
app/sdk/: __init__.py  base_evaluator.py  context.py  exceptions.py  logger.py  scoring.py  timer.py
app/services/: evaluation_service.py  openai_client.py
app/templates/: index.html  report.html
docs/: ARCHITECTURE.md  ENGINEERING.md  ROADMAP.md
tests/: test_health.py  test_mvp.py  test_openai_schema.py  test_registry.py  test_schemas.py  test_sdk.py  test_settings.py
